# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
auth_service/: .coverage  manage.py
auth_service/auth_service/: asgi.py  settings.py  urls.py
auth_service/telegram_user/: apps.py  middleware.py  models.py  urls.py  views.py
auth_service/telegram_user/migrations/: 0001_initial.py
auth_service/telegram_user/services/: tg_parser.py  tg_user_auth.py
auth_service/telegram_user/tests/: conftest.py
auth_service/telegram_user/tests/services/: conftest.py  test_tg_parser.py  test_tg_user_auth.py
auth_service/telegram_user/tests/views/: test_views.py
